--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,7 +2,9 @@
   "files.associations": {
     "complex": "c",
     "math.h": "c",
-    "cmath": "c"
+    "cmath": "c",
+    "unistd.h": "c",
+    "stdio.h": "c"
   },
   "C_Cpp_Runner.cCompilerPath": "gcc",
   "C_Cpp_Runner.cppCompilerPath": "g++",
