--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,7 +5,9 @@
     "cmath": "c",
     "unistd.h": "c",
     "stdio.h": "c",
-    "cub3d.h": "c"
+    "cub3d.h": "c",
+    "stdbool.h": "c",
+    "mlx.h": "c"
   },
   "C_Cpp_Runner.cCompilerPath": "gcc",
   "C_Cpp_Runner.cppCompilerPath": "g++",
