--- a/Cub3D/Makefile
+++ b/Cub3D/Makefile
@@ -3,19 +3,23 @@
 #                                                         :::      ::::::::    #
 #    Makefile                                           :+:      :+:    :+:    #
 #                                                     +:+ +:+         +:+      #
-#    By: meserghi <meserghi@student.42.fr>          +#+  +:+       +#+         #
+#    By: hidriouc <hidriouc@student.42.fr>          +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2024/06/01 12:07:58 by meserghi          #+#    #+#              #
-#    Updated: 2024/07/17 21:11:56 by meserghi         ###   ########.fr        #
+#    Updated: 2024/08/17 13:21:21 by hidriouc         ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
-lib = lib/ft_strdup.c lib/ft_strlen.c lib/free_arr.c lib/ft_strjoin.c
+lib = lib/ft_strdup.c lib/ft_strlen.c lib/free_arr.c lib/ft_strjoin.c lib/ft_split.c\
+	lib/ft_atoi.c
 
 utils = utils/mlx_hook.c utils/mlx_init.c utils/init_textures.c utils/rendering.c\
 		utils/get_color.c
 
 ray_casting = ray_casting/ray_casting.c ray_casting/find_intersection.c
+
+handel_input = handel_cub3d/ft_strncmp.c handel_cub3d/get_next_line_utils.c\
+	 handel_cub3d/get_next_line.c handel_cub3d/handel_Cub3.c
 
 GREEN = \033[1;32m
 RED = \033[1;31m
@@ -23,7 +27,7 @@ BLUE = \033[1;34m
 YELL = \033[0;33m
 STOP_C = \033[0m
 
-FILE = ${lib} ${utils} ${ray_casting} Cub3D.c
+FILE = ${lib} ${utils} ${ray_casting} ${handel_input} Cub3D.c
 
 FILE_OBJ = ${FILE:.c=.o}
 
