--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,14 +1,18 @@
 {
   "files.associations": {
-    "complex": "c",
-    "math.h": "c",
-    "cmath": "c",
-    "unistd.h": "c",
-    "stdio.h": "c",
-    "cub3d.h": "c",
-    "stdbool.h": "c",
-    "mlx.h": "c"
-  },
+	"complex": "c",
+	"math.h": "c",
+	"cmath": "c",
+	"unistd.h": "c",
+	"stdio.h": "c",
+	"cub3d.h": "c",
+	"stdbool.h": "c",
+	"mlx.h": "c",
+	"array": "c",
+	"string": "c",
+	"string_view": "c",
+	"vector": "c"
+},
   "C_Cpp_Runner.cCompilerPath": "gcc",
   "C_Cpp_Runner.cppCompilerPath": "g++",
   "C_Cpp_Runner.debuggerPath": "gdb",
